--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^10.0.1",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^112.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
