--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,10 +5,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
 MarkupSafe==2.1.2
-numpy==1.24.2
+numpy==1.26.4
 pysimilar==0.5
 scikit-learn==1.2.2
-scipy==1.10.1
+scipy==1.13.0
 six==1.16.0
 threadpoolctl==3.1.0
 Werkzeug==2.2.3
+setuptools
